[package]
name = "midl"
version = "0.1.0"
authors = ["Michael Bryan <michaelfbryan@gmail.com>"]
build = "build.rs"
edition = "2018"

[dependencies]
lalrpop-util = "0.16.1"
regex = "0.2.0"
codespan = "0.2.0"
# sum_type = "0.1.0"
sum_type = { git = "https://github.com/Michael-F-Bryan/sum_type" }

[build-dependencies]
lalrpop = "0.16.1"

[dev-dependencies]
pretty_assertions = "0.5.1"
